# chip-8-emulator

./: CMakeLists.txt  LICENSE  README.md  chip8.c  chip8.h  main.c
